...
                                   buttonText: "Сыграть еще раз") { [weak self] in
                guard let self = self else { return }
                
                self.restartGame()
            }
            
            alertPresenter?.show(model: model, identifier: "Game result")
            
        } else {
            switchToNextQuestion()
            questionFactory?.requestNextQuestion()
        }
    }
...
